--- a/my-app/src/components/Form/form.css
+++ b/my-app/src/components/Form/form.css
@@ -1,5 +1,5 @@
 .form {
-  height: 100vh;
+  display: flex;
   background-color:#f3f3f3;
 }
 
@@ -8,7 +8,5 @@
   display: flex;
   flex-direction: column;
   align-items: baseline;
-  justify-content: space-between;
   gap: 30px;
-  
 }
