--- a/lesson-37/my-app/src/index.css
+++ b/lesson-37/my-app/src/index.css
@@ -1,10 +1,41 @@
-body {
+* {
+  box-sizing: border-box;
   margin: 0;
+  padding: 0;
+  border: 0;
+}
+
+html {
+  font-size: 62.5%; /* 1rem = 10px */
+  scroll-behavior: smooth;
+  height: 100%;
+}
+
+a {
+  text-decoration: none;
+}
+
+button {
+  font-family: inherit;
+}
+
+body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100%;
+}
+
+#root {
+  
+    display: flex;
+    overflow: hidden;
+    flex-direction: column;
+    align-items: center;
+    min-height: 100%;
+  
 }
 
 code {
