--- a/my-app/src/components/Burger/Hamburger.css
+++ b/my-app/src/components/Burger/Hamburger.css
@@ -1,9 +1,8 @@
 .burger {
   display: block;
-  width: 60px;
+  width: 100px;
   height: 60px;
   position: relative;
-  /* padding: 20px; */
   transition-duration: 0.5s;
   background-color: rgb(32, 62, 195);
 }
@@ -12,13 +11,13 @@
   color: #fff;
   font-size: 24px;
   text-align: center;
-  padding: 15px;
+  padding: 15px 35px;
 }
 .fa-solid.fa-xmark {
-  display: none;
   color: #fff;
   font-size: 24px;
   text-align: center;
+  padding: 15px 35px;
 }
 .burger-navigation {
   position: absolute;
