--- a/my-app/src/components/Header/Header.css
+++ b/my-app/src/components/Header/Header.css
@@ -1,4 +1,24 @@
 .header {
   background-color: rgb(60, 95, 249);
   z-index: 50;
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+}
+.header-input {
+  width: 100%;
+  border: none;
+  background-color: rgba(96, 125, 255, 0.729);
+}
+.fa-magnifying-glass {
+  color: #fff;
+  text-align: center;
+  padding: 20px;
+  margin: auto;
+}
+.userName {
+  width: 200px;
+  color: #fff;
+  text-align: center;
+  margin: auto;
 }
