--- a/lesson-37/hw37-app/src/App.scss
+++ b/lesson-37/hw37-app/src/App.scss
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+.main {
+  margin: 0 auto;
+  max-width: 960px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 32px;
+  justify-content: center;
+}
