--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -2,12 +2,27 @@
   display: flex;
 }
 
-.list {
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.post {
+  width: 200px;
+  height: 150px;
+}
+
+.post__image {
+  width: 200px;
+  height: 150px;
+}
+
+/* .list {
   width: 100%;
   margin: 0;
   padding: 48px 0 0 32px;
-  background-color:#e0dede;
-}
+} */
 
 .counter {
   padding: 48px 0 0 32px;
