--- a/soloviev-hw-app/src/components/Header.css
+++ b/soloviev-hw-app/src/components/Header.css
@@ -5,15 +5,17 @@
   margin: 0 auto;
   display: flex;
   flex-direction: row;
+  align-items: center;
   background-color: rgb(241, 241, 241);
   box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.25);
   font-size: 1.6rem;
+  padding: 16px;
   margin-bottom: 32px;
 }
 
 .header .container {
   display: flex;
-  padding: 20px;
+  padding: 16px;
   width: 100%;
   align-items: center;
   justify-content: center;
@@ -22,21 +24,19 @@
 
 .header-nav__list {
   font-size: 1.6rem;
-  height: 40px;
   color: #666666;
   list-style: none;
   margin-left: 16px;
-  /* padding-left: 400px; */
   display: flex;
   justify-content: space-evenly;
   gap: 16px;
 }
 
 .header-nav__item {
+  height: 40px;
   padding-left: 16px;
   padding-right: 16px;
   color: inherit;
-  height: 40px;
   display: flex;
   align-items: center;
   
@@ -53,18 +53,44 @@
   padding: 16px;
 }
 
-.header__button {
-  height: 40px;
-  background: #222;
-  padding-left: 30px;
-  padding-right: 30px;
-  color: white;
-  border-radius: 5px;
-  font-family: inherit;
-  font-size: 1.5rem;
-  letter-spacing: 0.2rem;
+.button-burger {
+  width: 32px;
+  height: 32px;
+  position: relative;
+  background-color: rgb(241, 241, 241);
   cursor: pointer;
 }
+
+.button-burger::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 30px;
+  background-color: black;
+  height: 2px;
+}
+
+.button-burger::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 30px;
+  background-color: black;
+  height: 2px;
+}
+
+.button-burger span {
+  position: absolute;
+  top: 15px;
+  left: 0;
+  width: 30px;
+  background-color: black;
+  height: 2px;
+}
+
+
 
 .header__button:hover {
   opacity: 0.85;
