--- a/lesson-37/my-app/src/App.css
+++ b/lesson-37/my-app/src/App.css
@@ -7,6 +7,7 @@
 nav {
     height: 50px;
     width: 100%;
+    padding: 30px 0px;
     background-color: blue;
     position: fixed;
     display: flex;
@@ -14,6 +15,7 @@ nav {
 }
 main {
     padding: 40px;
+    margin-top: 50px;
 }
 p {
     margin: 20px;
