--- a/my-app/src/components/Burger/Hamburger.css
+++ b/my-app/src/components/Burger/Hamburger.css
@@ -1,37 +1,38 @@
 .burger {
-  display: block;
-  width: 100px;
-  height: 60px;
   position: relative;
+  display: block;
+  height: 60px;
   transition-duration: 0.5s;
   background-color: rgb(32, 62, 195);
+  padding: 0 100px 0 55px;
 }
 
 .fa-solid.fa-bars {
   color: #fff;
   font-size: 24px;
-  text-align: center;
-  padding: 15px 35px;
+  text-align: left;
+  padding: 18px 10px;
 }
 .fa-solid.fa-xmark {
+  position: relative;
   color: #fff;
   font-size: 24px;
-  text-align: center;
-  padding: 15px 35px;
+  text-align: left;
+  padding: 18px 10px;
 }
 .burger-navigation {
   position: absolute;
-  width: 200px;
+  left: 0;
+  width: 100%;
   background-color: rgb(32, 62, 195);
   color: #fff;
   font-size: 14px;
   text-align: left;
+  padding: 0 100px 0 55px;
 }
-.navigation-list {
-  padding: 20px;
-}
+
 .nav-item {
-  margin: 10px;
+  margin: 20px 0;
   cursor: pointer;
   transition: 0.3s;
 }
