--- a/my-app/src/components/Header/Header.css
+++ b/my-app/src/components/Header/Header.css
@@ -4,7 +4,6 @@
   display: flex;
   justify-content: space-between;
   text-align: center;
-  margin-top: 30px;
 }
 .header-input {
   width: 100%;
@@ -22,4 +21,5 @@
   color: #fff;
   text-align: center;
   margin: auto;
+  padding: 0 55px 0 0;
 }
