--- a/soloviev-hw-app/src/components/Header.css
+++ b/soloviev-hw-app/src/components/Header.css
@@ -1,5 +1,3 @@
-/* HEADER start */
-
 .header {
   width: 100%;
   margin: 0 auto;
@@ -7,7 +5,7 @@
   flex-direction: row;
   align-items: center;
   background-color: rgb(241, 241, 241);
-  box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.25);
+  /* box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.25); */
   font-size: 1.6rem;
   padding: 16px;
   margin-bottom: 32px;
@@ -23,8 +21,8 @@
 
 
 .header-nav__list {
-  font-size: 1.6rem;
-  color: #666666;
+  font-size: 1.8rem;
+  color: black;
   list-style: none;
   margin-left: 16px;
   display: flex;
@@ -34,8 +32,6 @@
 
 .header-nav__item {
   height: 40px;
-  padding-left: 16px;
-  padding-right: 16px;
   color: inherit;
   display: flex;
   align-items: center;
@@ -43,8 +39,7 @@
 }
 
 .header-nav__item:hover {
-  background-color: #2b2b2b;
-  color: white;
+  color: #999;
   border-radius: 5px;
 }
 
@@ -54,8 +49,8 @@
 }
 
 .button-burger {
-  width: 32px;
-  height: 32px;
+  width: 24px;
+  height: 24px;
   position: relative;
   background-color: rgb(241, 241, 241);
   cursor: pointer;
@@ -66,7 +61,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 30px;
+  width: 22px;
   background-color: black;
   height: 2px;
 }
@@ -76,23 +71,20 @@
   position: absolute;
   bottom: 0;
   left: 0;
-  width: 30px;
+  width: 22px;
   background-color: black;
   height: 2px;
 }
 
 .button-burger span {
   position: absolute;
-  top: 15px;
+  top: 11px;
   left: 0;
-  width: 30px;
+  width: 22px;
   background-color: black;
   height: 2px;
 }
 
-
-
 .header__button:hover {
-  opacity: 0.85;
+  opacity: 0.6;
 }
-/* HEADER end */
