--- a/lesson-37/my-app/src/App.css
+++ b/lesson-37/my-app/src/App.css
@@ -19,3 +19,13 @@
   display: flex;
   gap: 10px;
 }
+
+.container {
+  display: flex;
+  flex-direction: column;
+  max-width: 1000px;
+  padding: 20px;
+  margin: 0 auto;
+  gap: 10px;
+  align-items: center;
+}
