(init:hw40):add useContext in my app

--- a/lesson-37/my-app/src/components/CardBig/CardBig.css
+++ b/lesson-37/my-app/src/components/CardBig/CardBig.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border: 1px solid black;
+  border: 1px solid white;
   max-width: 600px;
   padding: 10px;
   margin-bottom: 30px;
