--- a/lesson-37/my-app/src/components/CardMid/CardMid.css
+++ b/lesson-37/my-app/src/components/CardMid/CardMid.css
@@ -1,7 +1,7 @@
 .wrapper-cardMid {
   display: flex;
   flex-direction: column;
-  border: 1px solid black;
+  border: 1px solid white;
   max-width: 250px;
   padding: 10px;
 }
