--- a/lesson-37/my-app/src/components/Form/Form.css
+++ b/lesson-37/my-app/src/components/Form/Form.css
@@ -3,10 +3,12 @@
   flex-direction: column;
   align-items: center;
   gap: 5px;
+  border: 1px solid white;
+  padding: 10px;
 }
 .input {
   padding: 2px;
-  border: 1px solid black;
+  border: 1px solid white;
   width: 300px;
 }
 
