init: homework-38 init

--- a/lesson-37/my-app/src/App.css
+++ b/lesson-37/my-app/src/App.css
@@ -12,11 +12,12 @@ nav {
     position: fixed;
     display: flex;
     align-items: center;
+    top: 0px;
 }
 main {
+    max-width: 1200px;
+    width: 100%;
+    margin: 0 auto;
     padding: 40px;
     margin-top: 50px;
-}
-p {
-    margin: 20px;
 }
