--- a/react-app/src/styles/global.scss
+++ b/react-app/src/styles/global.scss
@@ -6,9 +6,12 @@
   --color-violet: #5463ca;
   --color-violet-dark: #2436a7;
 
+  --color-gray-super-light: #e9e9e9;
   --color-gray-light: #f8f8fc;
   --color-gray-middle: #999ebb;
   --color-gray: #9295a4;
 
   --color-shadow-large: #8d8d8d;
+
+  --color-red: #f53f5b;
 }
