--- a/react-app/src/components/Form/Form.module.scss
+++ b/react-app/src/components/Form/Form.module.scss
@@ -1,5 +1,5 @@
 .container {
-  background-color: var(--color-gray-light);
+  background-color: var(--color-grayLight-in-grayDark);
   border-radius: 8px;
   padding: 16px;
 }
@@ -17,7 +17,7 @@
 }
 
 .inputControl {
-  background-color: var(--color-white);
+  background-color: var(--color-background);
   border-radius: 8px;
   padding: 12px 16px;
   caret-color: var(--color-violet);
