--- a/react-app/src/components/Header/Profile/Profile.module.scss
+++ b/react-app/src/components/Header/Profile/Profile.module.scss
@@ -1,9 +1,9 @@
 .container {
+  height: 100%;
   display: flex;
   align-items: center;
   column-gap: 8px;
 
-  height: 52px;
   margin-left: 1px;
   padding: 16px;
   background-color: var(--color-violet-dark);
