--- a/react-app/src/components/Header/SearchForm/SearchForm.module.scss
+++ b/react-app/src/components/Header/SearchForm/SearchForm.module.scss
@@ -1,4 +1,5 @@
 .container {
+  height: 100%;
   display: flex;
   align-items: center;
   column-gap: 16px;
@@ -11,6 +12,7 @@
 }
 
 .start {
+  height: 100%;
   padding: 16px;
   background-color: var(--color-violet-dark);
 }
