--- a/react-app/src/components/Pagination/PostPagination.module.scss
+++ b/react-app/src/components/Pagination/PostPagination.module.scss
@@ -4,7 +4,7 @@
   justify-content: space-between;
   flex-wrap: wrap;
 
-  border-top: 1px solid var(--color-gray-super-light);
+  border-top: 1px solid var(--color-grayLight-in-grayDark);
   padding-top: 16px;
 }
 
@@ -14,8 +14,9 @@
   gap: 16px;
 
   border-radius: 8px;
-  background-color: var(--color-gray-light);
+  background-color: var(--color-grayLight-in-grayDark);
   padding: 16px;
+  color: var(--color-text);
 }
 
 .next {
