--- a/react-app/src/styles/mixins/post-container.scss
+++ b/react-app/src/styles/mixins/post-container.scss
@@ -1,5 +1,5 @@
 @mixin post-container {
-  background-color: var(--color-gray-light);
+  background-color: var(--color-grayLight-in-grayDark);
   border-radius: 6px;
   padding: 16px;
 }
