--- a/lesson-37/my-app/src/components/CardSmall/CardSmall.css
+++ b/lesson-37/my-app/src/components/CardSmall/CardSmall.css
@@ -3,7 +3,8 @@
   justify-content: space-between;
   align-items: center;
   border: 1px solid white;
-  max-width: 200px;
+  width: 200px;
+  height: 180px;
   padding: 10px;
   margin-bottom: 30px;
 }
