--- a/my-app/src/components/Header/Header.css
+++ b/my-app/src/components/Header/Header.css
@@ -1,5 +1,5 @@
 .header {
-  background-color: rgb(60, 95, 249);
+  background-color: rgb(32, 62, 195);
   z-index: 50;
   display: flex;
   justify-content: space-between;
@@ -8,7 +8,11 @@
 .header-input {
   width: 100%;
   border: none;
-  background-color: rgba(96, 125, 255, 0.729);
+  background-color: rgb(80, 112, 255);
+  outline: none;
+  font-size: 20px;
+  color: #fff;
+  padding: 0 25px;
 }
 .fa-magnifying-glass {
   color: #fff;
@@ -22,4 +26,7 @@
   text-align: center;
   margin: auto;
   padding: 0 55px 0 0;
+}
+.search {
+  border-left: 1px solid rgb(97, 97, 97);
 }
