--- a/my-app/src/components/Post/post.css
+++ b/my-app/src/components/Post/post.css
@@ -1,23 +1,25 @@
 .post-wrap {
   display: flex;
   justify-content: space-around;
-  margin-top: 30px;
 }
 .post-image {
   min-width: 350px;
-  max-height: 350px;
+  max-height: 360px;
   overflow: hidden;
   position: relative;
+  object-fit: contain;
 }
 .image {
   width: 100%;
+  height: 100%;
   object-fit: contain;
 }
 .text-wrap {
   display: flex;
   justify-content: space-between;
   flex-direction: column;
-  padding: 0 80px 0 0;
+  margin-right: 30px;
+  margin-bottom: 50px;
 }
 .post-tittle {
   font-size: 28px;
