--- a/my-app/src/components/Posts/posts.css
+++ b/my-app/src/components/Posts/posts.css
@@ -4,28 +4,49 @@
   flex-wrap: wrap;
 }
 .post-item {
-  width: 420px;
-  margin-top: 70px;
-  margin-bottom: 50px;
+  width: 400px;
+  height: 450px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  position: relative;
+  cursor: pointer;
+  margin-bottom: 30px;
+}
+.post-item:last-child {
+  margin-bottom: 0;
+}
+.posts-wrap {
+  display: flex;
+  align-items: stretch;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  position: absolute;
 }
 .posts-item-image {
-  max-width: 420px;
-  max-height: 420px;
+  width: 100%;
+  min-height: 300px;
   overflow: hidden;
   object-fit: cover;
   position: relative;
 }
 .posts-item-image img {
+  width: 100%;
+  min-height: 100%;
   overflow: hidden;
   object-fit: cover;
+  position: absolute;
 }
-.posts-wrap {
-  display: flex;
-  justify-content: space-between;
-  flex-direction: column;
-}
+
 .posts-item-tittle {
-  font-size: 24px;
+  font-size: 18px;
   font-weight: 600;
   margin: 20px 0 30px;
+}
+.posts-item-date {
+  position: absolute;
+  bottom: 0px;
+  color: rgb(124, 124, 124);
 }
