feat (hw-app): add navigation

--- a/soloviev-hw-app/src/components/Card.css
+++ b/soloviev-hw-app/src/components/Card.css
@@ -1,10 +1,17 @@
 .card {
   display: flex;
-  width: 296px;
-  max-height: 196px;
-  padding: 16px;
+  justify-content: space-between;
+  width: 264px;
+  height: 196px;
+  padding: 10px;
   border: solid 1px gray;
+  border-radius: 10px;
   overflow: hidden;
+  cursor: pointer;
+}
+
+.card:hover {
+  background-color:rgb(241, 241, 241);
 }
 
 .data-block {
@@ -12,7 +19,7 @@
   flex-direction: column;
   max-width: 196px;
   font-size: 1.6rem;
-  margin-right: 24px;
+  margin-right: 10px;
 }
 
 .card-date {
@@ -26,7 +33,8 @@
 }
 
 .card-text {
-
+  max-height: 110px;
+  overflow: hidden;
 }
 
 .card-image img {
