--- a/soloviev-hw-app/src/components/Header.css
+++ b/soloviev-hw-app/src/components/Header.css
@@ -5,7 +5,7 @@
   flex-direction: row;
   align-items: center;
   background-color: rgb(241, 241, 241);
-  /* box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.25); */
+  /* background-color: black; */
   font-size: 1.6rem;
   padding: 16px;
   margin-bottom: 32px;
@@ -49,6 +49,7 @@
 }
 
 .button-burger {
+  display:flex;
   width: 24px;
   height: 24px;
   position: relative;
@@ -60,7 +61,7 @@
   content: '';
   position: absolute;
   top: 0;
-  left: 0;
+  left: 1px;
   width: 22px;
   background-color: black;
   height: 2px;
@@ -70,7 +71,7 @@
   content: '';
   position: absolute;
   bottom: 0;
-  left: 0;
+  left: 1px;
   width: 22px;
   background-color: black;
   height: 2px;
@@ -79,12 +80,28 @@
 .button-burger span {
   position: absolute;
   top: 11px;
-  left: 0;
+  left: 1px;
   width: 22px;
   background-color: black;
   height: 2px;
 }
 
 .header__button:hover {
+  opacity: 0.6;
+}
+
+.button-theme {
+  display: inline-block;
+  align-items: center;
+  text-align: center;
+  font-size: 1.6rem;
+  background-color: black;
+  color: white;
+  padding: 4px;
+  cursor: pointer;
+  margin-left: 16px;
+}
+
+.button-theme:hover {
   opacity: 0.6;
 }
