--- a/react-app/src/styles/global.scss
+++ b/react-app/src/styles/global.scss
@@ -11,6 +11,7 @@ html {
 
   --color-violet-light: #aeb9fd;
   --color-violet: #5463ca;
+  --color-violet-middle: #6173e1;
   --color-violet-dark: #2436a7;
 
   --color-gray-super-light: #e9e9e9;
