--- a/soloviev-hw-app/src/components/Header.css
+++ b/soloviev-hw-app/src/components/Header.css
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: space-between;
   background-color: rgb(241, 241, 241);
   /* background-color: black; */
   font-size: 1.6rem;
@@ -50,14 +51,14 @@
 
 .button-burger {
   display:flex;
-  width: 24px;
-  height: 24px;
+  width: 25px;
+  height: 25px;
   position: relative;
   background-color: rgb(241, 241, 241);
   cursor: pointer;
 }
 
-.button-burger::before {
+/* .button-burger::before {
   content: '';
   position: absolute;
   top: 0;
@@ -75,16 +76,16 @@
   width: 22px;
   background-color: black;
   height: 2px;
-}
+} */
 
-.button-burger span {
+/* .button-burger span {
   position: absolute;
   top: 11px;
   left: 1px;
   width: 22px;
   background-color: black;
   height: 2px;
-}
+} */
 
 .header__button:hover {
   opacity: 0.6;
@@ -104,4 +105,16 @@
 
 .button-theme:hover {
   opacity: 0.6;
+}
+
+.header .input-container{
+  width: 164px;
+  height: 32px;
+  justify-self: end;
+}
+.header .input{
+  width: 100%;
+  height: 100%;
+  font-size: 1.6rem;
+  padding-left: 2px;
 }
