--- a/my-app/src/components/Post/post.css
+++ b/my-app/src/components/Post/post.css
@@ -1,33 +1,39 @@
 .post-wrap {
-  display: flex;
-  justify-content: space-around;
+  /* display: flex;
+  justify-content: space-around; */
+  margin: 50px auto;
 }
 .post-image {
-  min-width: 350px;
-  max-height: 360px;
+  min-width: 250px;
+  height: 300px;
   overflow: hidden;
   position: relative;
-  object-fit: contain;
+  object-fit: cover;
+  margin: 30px auto;
+  text-align: center;
 }
 .image {
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
+  margin: auto;
   object-fit: contain;
-}
-.text-wrap {
-  display: flex;
-  justify-content: space-between;
-  flex-direction: column;
-  margin-right: 30px;
-  margin-bottom: 50px;
 }
 .post-tittle {
   font-size: 28px;
   font-weight: 800;
   margin-top: 20px;
   margin-bottom: 50px;
+  margin: auto;
+  text-align: center;
 }
 .post-date {
   color: rgb(117, 117, 117);
   font-size: 16px;
+  margin-top: 30px;
+}
+.contant-container {
+  margin: auto;
+}
+.post-text {
+  /* width: auto; */
 }
