--- a/products-app/src/pages/registration/styles.scss
+++ b/products-app/src/pages/registration/styles.scss
@@ -3,6 +3,14 @@
   justify-content: center;
   align-items: center;
 
+  &__success {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+  }
+
   &__inputs {
     display: flex;
     flex-direction: column;
