--- a/my-app/src/components/Header/Header.css
+++ b/my-app/src/components/Header/Header.css
@@ -8,6 +8,10 @@
   top: 0;
   left: 0;
 }
+.header a {
+  text-decoration: none;
+  margin: auto;
+}
 .header-input {
   width: 100%;
   border: none;
@@ -31,6 +35,18 @@
   padding: 0 55px 0 0;
   cursor: pointer;
 }
+
 .search {
   border-left: 1px solid rgb(97, 97, 97);
+}
+.theme-btn {
+  width: 60px;
+  height: 40px;
+  border-radius: 50%;
+  display: block;
+  margin: auto;
+  border: none;
+  background-color: #fff;
+  opacity: 70%;
+  cursor: pointer;
 }
