--- a/my-app/src/pages/registration/registrate.css
+++ b/my-app/src/pages/registration/registrate.css
@@ -2,7 +2,8 @@
   height: 100vh;
 }
 .registrate-form {
-  margin: 100px auto 0 auto;
+  padding: 100px 0;
+  margin: 0 auto;
 }
 .registrate-input-container {
   display: flex;
@@ -23,7 +24,7 @@
 .registrate-btn {
   width: 300px;
   padding: 10px;
-  background-color: rgb(32, 62, 195);
+  background-color: #203ec3;
   font-size: 16px;
   color: #fff;
   border: none;
@@ -41,7 +42,7 @@
 }
 .registrationMessage-btn {
   display: block;
-  background-color: rgb(32, 62, 195);
+  background-color: rgb(195, 32, 162);
   font-size: 16px;
   color: #fff;
   padding: 10px 35px;
