--- a/soloviev-hw-app/src/components/Header.css
+++ b/soloviev-hw-app/src/components/Header.css
@@ -5,8 +5,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  background-color: rgb(241, 241, 241);
-  /* background-color: black; */
+  /* background-color: rgb(241, 241, 241); */
   font-size: 1.6rem;
   padding: 16px;
   margin-bottom: 32px;
@@ -23,7 +22,7 @@
 
 .header-nav__list {
   font-size: 1.8rem;
-  color: black;
+  color: inherit;
   list-style: none;
   margin-left: 16px;
   display: flex;
@@ -54,53 +53,33 @@
   width: 25px;
   height: 25px;
   position: relative;
-  background-color: rgb(241, 241, 241);
+  background-color: inherit;
   cursor: pointer;
+  color: inherit;
 }
-
-/* .button-burger::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 1px;
-  width: 22px;
-  background-color: black;
-  height: 2px;
-}
-
-.button-burger::after {
-  content: '';
-  position: absolute;
-  bottom: 0;
-  left: 1px;
-  width: 22px;
-  background-color: black;
-  height: 2px;
-} */
-
-/* .button-burger span {
-  position: absolute;
-  top: 11px;
-  left: 1px;
-  width: 22px;
-  background-color: black;
-  height: 2px;
-} */
 
 .header__button:hover {
   opacity: 0.6;
+}
+
+.header-right {
+  display: flex;
 }
 
 .button-theme {
   display: inline-block;
   align-items: center;
   text-align: center;
+  width: 96px;
   font-size: 1.6rem;
   background-color: black;
+  border-radius: 4px;
   color: white;
-  padding: 4px;
+  padding: 6px;
   cursor: pointer;
+  user-select: none;
   margin-left: 16px;
+
 }
 
 .button-theme:hover {
@@ -110,11 +89,12 @@
 .header .input-container{
   width: 164px;
   height: 32px;
-  justify-self: end;
+  margin-left: 16px;
 }
 .header .input{
   width: 100%;
   height: 100%;
   font-size: 1.6rem;
   padding-left: 2px;
+  
 }
