--- a/react-app/src/styles/global.scss
+++ b/react-app/src/styles/global.scss
@@ -13,6 +13,7 @@ html {
   --color-violet: #5463ca;
   --color-violet-middle: #6173e1;
   --color-violet-dark: #2436a7;
+  --color-violet-transparent_60: rgb(119 129 182 / 60%);
 
   --color-gray-super-light: #e9e9e9;
   --color-gray-light: #f8f8fc;
