--- a/react-app/src/styles/global.scss
+++ b/react-app/src/styles/global.scss
@@ -5,13 +5,15 @@ html {
 }
 
 :root {
-  --color-violet-light: #eceefa;
   --color-violet: #2436a7;
+  --color-violet-light: #aeb9fd;
+  --color-violet-dark: #2436a7;
 
   --color-white: #fff;
   --color-gray: gray;
 
   --color-dark: #000;
+
 
 }
 
