--- a/my-app/src/components/Burger/Hamburger.css
+++ b/my-app/src/components/Burger/Hamburger.css
@@ -1,42 +1,63 @@
 .burger {
-  position: relative;
-  display: block;
-  height: 60px;
-  transition-duration: 0.5s;
-  background-color: rgb(32, 62, 195);
-  padding: 0 100px 0 55px;
+  margin-left: 40px;
+  padding-right: 40px;
+  transition-duration: all 0.2s;
 }
 
 .fa-solid.fa-bars {
   color: #fff;
   font-size: 24px;
   text-align: left;
-  padding: 18px 10px;
+  padding: 18px 20px;
 }
 .fa-solid.fa-xmark {
   position: relative;
   color: #fff;
   font-size: 24px;
   text-align: left;
-  padding: 18px 10px;
+  padding: 18px 20px;
 }
 .burger-navigation {
-  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
   left: 0;
-  width: 100%;
-  background-color: rgb(32, 62, 195);
-  color: #fff;
   font-size: 14px;
-  text-align: left;
-  padding: 0 100px 0 55px;
+  transition: all 0.2s;
 }
-
+.blur {
+  width: 100vw;
+  height: 100vh;
+  backdrop-filter: blur(4px);
+  position: absolute;
+}
+.navigation-list {
+  width: 20%;
+  height: 100%;
+  background-color: rgb(229, 228, 228);
+  position: absolute;
+  transition: all 0.4s;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
 .nav-item {
-  margin: 20px 0;
+  margin: 30px 0;
   cursor: pointer;
   transition: 0.3s;
+}
+.nav-item:first-child {
+  margin-top: 70px;
 }
 .nav-item:hover {
   color: rgb(174, 174, 174);
   transition: 0.3s;
+}
+
+.logOut-btn {
+  font-size: 16px;
+  color: #fff;
+  background-color: #203ec3;
+  border: none;
+  padding: 10px 50px;
 }
