--- a/my-app/src/pages/registration/registrate.css
+++ b/my-app/src/pages/registration/registrate.css
@@ -1,28 +1,39 @@
 .registrate-wrapp {
-  height: 100vh;
+  margin: auto;
+  margin-top: 30px;
 }
 .registrate-form {
-  padding: 100px 0;
-  margin: 0 auto;
+  margin: auto;
+  text-align: center;
+  border: 1px solid rgb(124, 124, 124);
+  width: 500px;
+  padding: 50px;
+  margin-top: 30px;
 }
 .registrate-input-container {
   display: flex;
   flex-direction: column;
-  width: 450px;
-  margin: auto;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  margin-bottom: 40px;
 }
 .registrate-input {
-  margin-bottom: 50px;
+  width: 400px;
+  padding: 5px 10px;
+  margin-top: 10px;
+  margin-bottom: 30px;
   font-size: 16px;
-  padding: 7px 5px;
-  width: 300px;
 }
+
 .registrate-input-title {
-  text-align: left;
+  font-size: 16px;
+  font-weight: 600;
+  color: rgb(124, 124, 124);
   margin-bottom: 5px;
+  align-items: flex-start;
 }
 .registrate-btn {
-  width: 300px;
+  width: 400px;
   padding: 10px;
   background-color: #203ec3;
   font-size: 16px;
@@ -33,12 +44,10 @@
 .registrationMessage {
   text-align: center;
   margin-bottom: 50px;
+  font-size: 26px;
 }
 .registrationMessage-wrapp {
-  border: 1px solid rgb(124, 124, 124);
-  width: 500px;
-  padding: 100px;
-  margin: 100px auto 0 auto;
+  margin-top: 100px;
 }
 .registrationMessage-btn {
   display: block;
@@ -50,4 +59,10 @@
   cursor: pointer;
   text-align: center;
   margin: auto;
+}
+.registrate-title {
+  margin: auto;
+  width: 500px;
+  font-size: 26px;
+  font-weight: 400;
 }
