--- a/my-app/src/pages/signIn/signIn.css
+++ b/my-app/src/pages/signIn/signIn.css
@@ -1,18 +1,19 @@
 .signIn-wrapp {
   margin: auto;
-  height: 100vh;
   margin-top: 30px;
 }
 .signIn-title {
   margin: auto;
   width: 500px;
+  font-size: 26px;
+  font-weight: 400;
 }
 .form {
   margin: auto;
   text-align: center;
   border: 1px solid rgb(124, 124, 124);
   width: 500px;
-  padding: 100px;
+  padding: 50px;
   margin-top: 30px;
 }
 .input-container {
@@ -23,15 +24,16 @@
   margin-bottom: 40px;
 }
 .input-title {
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 600;
   color: rgb(124, 124, 124);
 }
 
 .input {
-  width: 300px;
+  width: 400px;
   padding: 5px 10px;
   margin-top: 10px;
+  font-size: 16px;
 }
 .signIn-btn {
   background-color: rgb(32, 62, 195);
@@ -40,4 +42,5 @@
   padding: 10px 35px;
   border: none;
   cursor: pointer;
+  width: 400px;
 }
