--- a/my-app/src/components/Posts/post/post.css
+++ b/my-app/src/components/Posts/post/post.css
@@ -1,5 +1,5 @@
 .post-wrap {
-  margin: 50px auto 0 auto;
+  margin: 0 auto 0 auto;
   padding: 0 0 50px 0;
   height: 100vh;
 }
@@ -11,6 +11,8 @@
   object-fit: cover;
   margin: 30px auto;
   text-align: center;
+  display: flex;
+  flex-direction: column;
 }
 .image {
   max-width: 100%;
@@ -23,7 +25,7 @@
   font-weight: 800;
   margin-top: 20px;
   margin-bottom: 50px;
-  margin: auto;
+  margin: 50px auto 0 auto;
   text-align: center;
 }
 .post-date {
@@ -33,4 +35,17 @@
 }
 .contant-container {
   margin: auto;
+}
+.quiсk-view {
+  display: block;
+  margin: 30px auto;
+  padding: 10px 35px;
+  background-color: palevioletred;
+  border: none;
+  cursor: pointer;
+  color: #fff;
+  font-size: 14px;
+}
+.pop-up {
+  display: none;
 }
