--- a/products-app/src/pages/posts/styles.scss
+++ b/products-app/src/pages/posts/styles.scss
@@ -1,14 +1,34 @@
 .posts {
   height: fit-content;
   padding: 24px;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 10px;
+
+  &__search-form {
+    display: flex;
+    gap: 10px;
+  }
+
+  &__list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    padding: 20px 0;
+  }
+
+  &__post-card {
+    width: 250px;
+  }
 
   &__image {
     width: 250px;
     height: 150px;
     border: 2px solid black;
+    object-fit: cover
+  }
+
+  &__post-title {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
   }
 
   &__like {
